--- a/forge/src/main/resources/data/beachparty/forge/biome_modifier/add_seashells.json
+++ b/forge/src/main/resources/data/beachparty/forge/biome_modifier/add_seashells.json
@@ -1,6 +1,6 @@
 {
   "type": "forge:add_features",
   "biomes": "#beachparty:beach",
-  "features": "beachparty:seastars",
+  "features": "beachparty:seashells",
   "step": "vegetal_decoration"
 }
